fix: wrong scrollbar handle position

--- a/theme.less
+++ b/theme.less
@@ -736,6 +736,10 @@
                     transition: opacity 0.1s, margin-left 0.1s;
                     margin-left: -20px;
                 }
+                .ctrl {
+                    margin: 0;
+                    padding: 0;
+                }
                 &:hover {
                     opacity: 1 !important;
 
